  command-line interface description files.

- Modified the crypto HMAC code to do precalculation of the intermediate
  hash results.

- Fixed base64 decoding on systems where char is unsigned by default.
  Thanks Gerrit Pape.

- Tweaked the ghash_add function to return a pointer to the newly
  created entry (since some uses will want to use it immediately).

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.031

- Brown paper bag release to fix missing header file for HMAC support.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.030

- Added a RFC 2104 generic HMAC (keyed hashing for message
  authentication) routine to the crypto section, with control blocks for
  MD5, SHA1, SHA256, SHA384, and SHA512.

- Added support for UID and GID names (instead of just numbers) in
  bg-installer.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.028

- Added sysdep for dynamic linker functions (dlopen etc).

- Fixed bug in self test for unix/selfpipe.c that caused problems with
  running make.

- Switched from standard GPL to LGPL-2.1 license.

Development of this version has been sponsored by FutureQuest, Inc.
ossi@FutureQuest.net  http://www.FutureQuest.net/
-------------------------------------------------------------------------------
Changes in version 1.027

- Fixed numberic export glitch in vpwentry_export.

- Fixed dependancies to let "make -j" work properly.

- Added some pre-computed .lib files (such as socket.lib).
